[package]
name = "datp"
version = "0.1.0"
edition = "2024"
description = "datp - library for totp"
license-file = "LICENSE.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hmac = "0.13.0-rc.3"
sha1 = "0.11.0-rc.3"
base32 = "0.5.1"
rand = "0.10.0-rc.5"
qrcode = "0.14.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1